--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,25 @@ a:hover {
     text-decoration: none;
 }
 
-h3 {}
+h3 {
+    color: #0B1354;
+    font-size: 56px;
+    line-height: 72px;
+    position: relative;
+    font-weight: 700;
+}
 
-h3::before {}
+h3:before {
+    content: "";
+    position: absolute;
+    left: 4px;
+    bottom: -3px;
+    width: 25px;
+    background: #6A0DAD;
+    box-sizing: border-box;
+    border-radius: 5px;
+    height: 7px;
+}
 
 .container-full-width {
     width: 100%;
@@ -49,8 +65,6 @@ theme-btn:focus {
     height: 100%;
     overflow-y: auto;
 }
-
-.side-nav nav {}
 
 .side-nav nav ul {
     padding: 0;
@@ -123,22 +137,18 @@ theme-btn:focus {
 }
 
 .home-sec {
-    background: #F3F3F3;
+    background-image: url(../images/Group\ 51.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: cover;
     padding: 0 7%;
     height: 100vh;
     overflow: hidden;
 }
 
-.home-sec .row,
-.home-sec .col-md-6 {
-    height: 100%;
-}
-
 .home-content {
-    padding-top: 150px;
+    padding-top: 200px;
 }
-
-.home-content img {}
 
 .home-content h1 {
     margin-bottom: 30px;
@@ -155,64 +165,183 @@ theme-btn:focus {
     font-weight: 600;
 }
 
-.home-content-img {height: 100%;position: relative;}
-
-.home-content-img img {
-    padding-top: 50px;
-    position: absolute;
-    bottom: 0;
+.family-sec {
+    padding: 150px 7%;
 }
 
-.family-sec {}
+.family-sec h3 {
+    margin-bottom: 60px;
+}
 
-.family-sec h3 {}
+.family-sec p {
+    color: #0B1354;
+    font-size: 16px;
+    line-height: 32px;
+    font-weight: 500;
+    margin: 0;
+}
 
-.family-sec p {}
+.education-sec {
+    background: #FAFAFA;
+    padding: 150px 7%;
+    padding-bottom: 100px;
+}
 
-.family-sec img {}
+.education-sec h3 {
+    margin-bottom: 90px;
+}
 
-.education-sec {}
+.edu-card {
+    display: table;
+    width: 100%;
+    margin-bottom: 60px;
+    position: relative;
+}
 
-.education-sec h3 {}
+.edu-card-num {
+    width: 100px;
+    height: 100px;
+    display: table-cell;
+    background: #6A0DAD;
+    border-radius: 60px;
+    overflow: hidden;
+    position: absolute;
+    z-index: 1;
+}
 
-.edu-card {}
+.card-num-view {
+    height: 100%;
+}
 
-.edu-card-num {}
+.card-num-view p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 0.7;
+}
 
-.card-num-view {}
+.edu-card-dtl {
+    position: relative;
+    padding-left: 50px;
+}
 
-.card-num-view p {}
+.edu-card-text {
+    background: #FFFFFF;
+    border-radius: 0 8px 8px 0;
+    box-shadow: 0 3px 6px #6A0DAD16;
+    padding: 7.8px 10px;
+    padding-left: 65px;
+}
 
-.edu-card-dtl {}
+.edu-card-dtl p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #0B1354;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 1;
+}
 
-.edu-card-dtl p {}
+.edu-card-dtl a {
+    margin: 0;
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #6A0DAD;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 1;
+}
 
-.edu-card-dtl p b {}
+.hobbies-sec {
+    background: #0B1354;
+    padding: 100px 0;
+}
 
-.edu-card-dtl a {}
+.hobbies-sec p {
+    margin: 0;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 500;
+}
 
-.hobbies-sec {}
+.hobbies-sec p i {
+    font-size: 28px;
+    margin-right: 12px;
+}
 
-.hobbies-sec p {}
+.achievement-sec {
+    padding: 150px 7%;
+}
 
-.hobbies-sec p i {}
+.achievement-sec h3 {
+    margin-bottom: 60px;
+}
 
-.achievement-sec {}
+.achievement-sec ul {
+    margin: 0;
+    list-style: url(../images/dot-circle.png);
+    padding-left: 27px;
+}
 
-.achievement-sec h3 {}
+.achievement-sec ul li {
+    padding-left: 2px;
+    color: #0B1354;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+}
 
-.achievement-sec ul {}
+.plan-sec {
+    background-image: url(../images/6408.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
 
-.achievement-sec ul li {}
+.plan-content {
+    background-color: #0b1456b3;
+    padding: 150px 7%;
+}
 
-.achievement-sec img {}
+.plan-content h3 {
+    color: #fff;
+    margin-bottom: 40px;
+}
 
-.plan-sec {}
+.plan-content h3:before {
+    left: 50%;
+    bottom: -20px;
+    width: 120px;
+    background: #fff;
+    transform: translate(-50%, 0);
+    height: 6px;
+}
 
-.plan-content {}
+.plan-content p {
+    margin: 0;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 30px;
+    max-width: 650px;
+    margin: auto;
+}
 
-.plan-content h3 {}
-
-.plan-content p {}
-
-footer {}
+footer {
+    background: #0B1354;
+    height: 10px;
+}
